--- a/Common/Cryptography/VisualCrypt.Cryptography/VisualCrypt.Cryptography.csproj
+++ b/Common/Cryptography/VisualCrypt.Cryptography/VisualCrypt.Cryptography.csproj
@@ -58,7 +58,7 @@
     <Compile Include="VisualCrypt2\DataTypes\RoundsExponent.cs" />
     <Compile Include="VisualCrypt2\DataTypes\RandomKey32.cs" />
     <Compile Include="VisualCrypt2\DataTypes\SecureBytes.cs" />
-    <Compile Include="VisualCrypt2\DataTypes\PrunedPassword.cs" />
+    <Compile Include="VisualCrypt2\DataTypes\NormalizedPassword.cs" />
     <Compile Include="VisualCrypt2\Implementations\AESDir.cs" />
     <Compile Include="VisualCrypt2\Implementations\Deflate.cs" />
     <Compile Include="VisualCrypt2\Implementations\KeyStore.cs" />
@@ -74,7 +74,7 @@
     <Compile Include="VisualCrypt2\DataTypes\Compressed.cs" />
     <Compile Include="VisualCrypt2\DataTypes\BCrypt24.cs" />
     <Compile Include="VisualCrypt2\DataTypes\PasswordDerivedKey32.cs" />
-    <Compile Include="VisualCrypt2\Implementations\VisualCrypt2API.cs" />
+    <Compile Include="VisualCrypt2\Implementations\VisualCrypt2Service.cs" />
     <Compile Include="VisualCrypt2\Implementations\VisualCrypt2Formatter.cs" />
     <Compile Include="VisualCrypt2\Interfaces\IPlatform.cs" />
     <Compile Include="VisualCrypt2\DataTypes\CipherV2.cs" />
@@ -82,10 +82,9 @@
     <Compile Include="VisualCrypt2\DataTypes\VisualCryptText.cs" />
     <Compile Include="VisualCrypt2\DataTypes\SHA512PW64.cs" />
     <Compile Include="VisualCrypt2\Infrastructure\Response.cs" />
-    <Compile Include="VisualCrypt2\Interfaces\IVisualCrypt2API.cs" />
+    <Compile Include="VisualCrypt2\Interfaces\IVisualCrypt2Service.cs" />
     <Compile Include="VisualCrypt2\Implementations\BCrypt.cs" />
     <Compile Include="VisualCrypt2\Implementations\Base64Encoder.cs" />
-    <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="VisualCrypt2\Infrastructure\ByteArrays.cs" />
     <Compile Include="VisualCrypt2\Infrastructure\FillWithZeros.cs" />
     <Compile Include="VisualCrypt2\Infrastructure\StringExtensions.cs" />
